--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
-      POSTGRES_DATABASE: ecom_db
+      POSTGRES_DATABASE: ecom_auth
+      SECRET_KEY: "37zGZt5mP4e5xwZ3-NGjDnCMentBI8y3Y-dEkv4G8dN9qjpqUc-G9GvGWI6TxEFBSFE"
     ports:
       - "50051:50051"
     depends_on:
